# pyjit

./: Cargo.toml  pyproject.toml
src/: funcs.rs  lib.rs  var.rs
tests/: film.py  integrator.py  point.py  rand.py  random.py  ray.py  sampler.py  scene.py  sensor.py  shape.py  tensor.py  trace_ray.py  transform.py  vector.py
